--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .Ruserdata
 api_key.txt
 *.html
+rsconnect/documents/hop_airdrop.Rmd/science.flipsidecrypto.xyz/carlos_mercado/hop_airdrop_review.dcf
